Primer commit sobremesa

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,6 +12,7 @@
     <a href="/register">
         <input type="button" value="register">
     </a>
+    <h1 th:text="${loginError}"></h1>
 </form>
 </body>
 </html>
