--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,8 +9,8 @@
     <label>Username:</label><input type="text"><br>
     <label>Password:</label><input type="text"><br>
     <input type="submit" value="login">
-    <a href="/register">
-        <input type="button" value="register">
+    <a href="/signup">
+        <input type="button" value="Signup">
     </a>
     <h1 th:text="${loginError}"></h1>
 </form>
