--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <form action="/settings" method="post">
-        Contraseña:<input type="text" name="password">
-        Nombre real:<input type="text" name="realName" th:value="${realName}">
-        Apellidos:<input type="text" name="surname" th:value="${surname}">
+        Contraseña:<input type="text" name="password"><br>
+        Nombre real:<input type="text" name="realName" th:value="${realName}"><br>
+        Apellidos:<input type="text" name="surname" th:value="${surname}"><br>
         <input type="submit" value="Cambia">
     </form>
     <a href="/objects">
