--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -14,5 +14,8 @@
     <a href="/objects">
         <input type="button" value="Objects">
     </a>
+    <form action="/deleteuser" method="post">
+        <input type="submit" value="Delete User">
+    </form>
 </body>
 </html>
