--- a/src/main/resources/templates/bucket.html
+++ b/src/main/resources/templates/bucket.html
@@ -1,29 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        * {
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+        a {
+            font-size: 30px;
+            color: black;
+            transition: 0.2s;
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+        a:hover {
+            color: rgb(240, 240, 240);
+            transition: 0.2s;
+        }
+
+        a:link,
+        a:visited {
+            text-decoration: none;
+        }
+
+        body {
+            background-color: rgb(15, 175, 95);
+        }
+
+        .ref::before {
+            margin-left: 30px;
+            margin-right: 30px;
+            content: "Subir archivo";
+        }
+
+        #content {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            margin-top: 15%;
+        }
+
+        #file {
+            display: inline-block;
+            cursor: pointer;
+            border-style: none;
+            border-radius: 15px;
+            font-size: 25px;
+            color: rgb(240, 240, 240);
+            padding: 20px 50px 20px 40px;
+            background-color: rgb(8, 100, 54);
+            transition: 0.2s;
+            box-sizing: border-box;
+        }
+
+        h1 {
+            position: absolute;
+            width: 80%;
+            top: 0px;
+        }
+
+        #objects {
+            width: 100%;
+            display: flex;
+            justify-content: right;
+        }
+
+        .normal {
+            font-size: 30px;
+            margin-left: 5%;
+        }
+
+        #create {
+            width: 100%;
+            display: flex;
+            justify-content: right;
+        }
+
+        #file:hover {
+            padding: 30px 60px 30px 50px;
+            transition: 0.2s;
+            background-color: rgb(5, 65, 35);
+            box-sizing: border-box;
+        }
+
+        #content {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            margin-top: 0%;
+        }
+
+        #form {
+            margin-top: 5%;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+
+        input[type=text] {
+            width: 100%;
+            margin: 0px 0px 15px;
+            padding: 12px 20px;
+            border-style: none;
+            border-radius: 15px;
+            height: 50px;
+            width: 350px;
+            background-color: rgb(8, 100, 54);
+            font-size: large;
+            box-sizing: border-box;
+            color: rgb(240, 240, 240);
+            transition: 0.2s;
+        }
+
+        input[type=text]:hover {
+            background-color: rgb(5, 65, 35);
+            height: 70px;
+            width: 370px;
+            padding: 22px 30px;
+
+            transition: 0.2s;
+        }
+
+        input[type=text]:focus {
+            color: black;
+            outline: 2px solid rgb(97, 23, 87);
+            background-color: rgb(21, 248, 135);
+        }
+
+        input[type=file] {
+            display: none;
+        }
+
+        input[type=submit],
+        input[type=button] {
+            border-style: none;
+            border-radius: 15px;
+            font-size: 25px;
+            color: rgb(240, 240, 240);
+            padding: 20px 50px 20px 40px;
+            background-color: rgb(8, 100, 54);
+            transition: 0.2s;
+            box-sizing: border-box;
+            margin-top: 5%;
+        }
+
+        input[type=submit]:hover,
+        input[type=button]:hover,
+        input[type=file]:hover {
+            padding: 30px 60px 30px 50px;
+            transition: 0.2s;
+            background-color: rgb(5, 65, 35);
+            box-sizing: border-box;
+        }
+    </style>
 </head>
+
 <body>
-    <h1 th:text="${bucket}"></h1>
-    <ul>
-        <li th:each="o : ${objects}">
-            <a th:href="@{/objects/{bucket}/{object}(bucket=${bucket}, object=${o.name})}">[[${o.name}]]</a>
-        </li>
-    </ul>
-    <form th:action="@{/objects/{bucket}(bucket=${bucket})}" method="post" enctype="multipart/form-data">
-        Nom del objecte:<input type="text" name="name"><br>
-        Descripción:<input type="text" name="description"><br>
-        <input type="file" name="file" accept="*/*"><br>
-        <input type="hidden" name="bucket" th:value="${bucket}">
-        <input type="submit" value="Crea object"><br>
-        <h1 th:text="${objectError}"></h1>
-    </form>
+
+    <div id="objects">
+        <form action="/objects" method="get">
+            <input type="submit" value="Objects"><br>
+        </form>
+    </div>
+    <h1>[[${bucket}]]</h1>
+
+    <div id="content">
+        <ul>
+            <li th:each="o : ${objects}">
+                <a th:href="@{/objects/{bucket}/{object}(bucket=${bucket}, object=${o.name})}">[[${o.name}]]</a>
+            </li>
+        </ul>
+    </div>
+    <div id="form">
+        <form th:action="@{/objects/{bucket}(bucket=${bucket})}" method="post" enctype="multipart/form-data">
+            <label class="normal">Nombre del objeto</label><br></brZ><input type="text" name="name"><br>
+            <label class="normal">Descripción</label><br><input type="text" name="description"><br>
+            <label id="file">
+                <span class="ref">
+                    <input type="file" name="file" accept="*/*"><br>
+                </span>
+            </label>
+            <input type="hidden" name="bucket" th:value="${bucket}">
+            <br>
+            <input type="submit" value="Crear objeto"><br>
+            <h1 th:text="${objectError}"></h1>
+        </form>
+    </div>
+
     <form th:action="@{/deletebucket/{bucket}(bucket=${bucket})}" method="post">
         <input type="submit" value="Borra bucket"><br>
     </form>
-    <a href="/objects">
-        <input type="button" value="Objects">
-    </a>
+
 </body>
+
 </html>
