--- a/src/css.css
+++ b/src/css.css
@@ -1,14 +1,22 @@
 *{
     font-family: 'Courier New', Courier, monospace;
 }
+h1{
+    position: absolute;
+    width: 80%;
+    display: flex;
+    justify-content: left;
+    top: 20px;
+}
 a{
     font-size: 30px;
-    color: black;
+    color: white;
     transition: 0.2s;
     font-family: 'Courier New', Courier, monospace;
+    
 }
 a:hover{
-    color: rgb(240, 240, 240);
+    color: rgb(8, 100, 54);
     transition: 0.2s;
 }
 a:link, a:visited{
@@ -17,18 +25,16 @@ a:link, a:visited{
 body{
     background-color: rgb(15, 175, 95);
 }
-.ref::before{
+label{
+    font-size: 30px;
+    margin-left: 5%;
+}
+.ref::before {
     margin-left: 30px;
     margin-right: 30px;
     content: "Subir archivo";
 }
-#content{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-top: 15%;
-}
-#file{
+#file {
     display: inline-block;
     cursor: pointer;
     border-style: none;
@@ -40,42 +46,70 @@ body{
     transition: 0.2s;
     box-sizing: border-box;
 }
-h1{
-    position: absolute;
-    width: 100%;
-    top: 0px;
-}
-#objects{
-    width: 100%;
-    display: flex;
-    justify-content: right;
-}
-.normal{
-    font-size: 30px;
-    margin-left: 5%;
-}
-#create{
-    width: 100%;
-    display: flex;
-    justify-content: right;
-}
-#file:hover{
+#file:hover {
     padding: 30px 60px 30px 50px;
     transition: 0.2s;
     background-color: rgb(5, 65, 35);
     box-sizing: border-box;
 }
-#content{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-top: 0%;
-}
-#form{
+#form {
     margin-top: 5%;
     width: 100%;
+    display: grid;
+    justify-content: center;
+}
+#update{
+    position: relative;
+    top: 10px;
+    left: 40px;
+}
+#buttons{
+    width: 100%;
+    display: grid;
+    justify-content: right;
+}
+#delete{
+    position: absolute;
+    width: 100%;
+    display: grid;
+    justify-content: right;
+    right: 10px;
+    bottom: 10px;
+}
+table{
     display: flex;
     justify-content: center;
+    top: 10%;
+    border-collapse: collapse;
+}
+tbody{
+    border-radius: 20px;
+    background-color: rgb(19, 216, 118);
+    border: 1px rgb(15, 175, 95);
+}
+.left-table-top{
+    border-radius: 20px 0px 0px 0px;
+}
+.left-table-bottom{
+    border-radius: 0px 0px 0px 20px;
+}
+.left-table, .left-table-top{
+    border-bottom: 1px solid rgba(0, 0, 0, 0.384);
+}
+.left-table, .left-table-top, .left-table-bottom{
+    border-right: 1px solid rgba(0, 0, 0, 0.384);
+}
+.rigth-table-top{
+    border-radius: 0px 20px 0px 0px;
+}
+.rigth-table-bottom{
+    border-radius: 0px 0px 20px 0px;
+}
+.rigth-table, .rigth-table-top{
+    border-bottom: 1px solid rgba(0, 0, 0, 0.384);
+}
+tr:hover{
+background-color: rgba(0, 0, 0, 0.384);
 }
 input[type = text]{
     width: 100%;
@@ -118,7 +152,6 @@ input[type=submit], input[type=button]{
     background-color: rgb(8, 100, 54);
     transition: 0.2s;
     box-sizing: border-box;
-    margin-top: 5%;
 }
 input[type=submit]:hover, input[type=button]:hover,input[type=file]:hover{
     padding: 30px 60px 30px 50px;
